--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
   </head>
-  <body>
+  <body class="text-gray-600">
     <h1>test script</h1>
     <!-- content wrapper -->
     <div>
       <div>
         <nav>
           <div>
-            <h1>
+            <h1 class="font-bold uppercase">
               <a href="/">Food Ninja</a>
             </h1>
           </div>
           <ul>
-            <li>
+            <li class="text-gray-700 font-bold">
               <a href="#">
                 <span>Home</span>
               </a>
@@ -46,17 +46,17 @@
       </div>
 
       <header>
-        <h2>Recipies</h2>
-        <h3>For Ninjas</h3>
+        <h2 class="text-gray-700 text-6xl font-semibold">Recipies</h2>
+        <h3 class="text-2xl font-semibold">For Ninjas</h3>
       </header>
 
       <div>
-        <h4>Latest Recipies</h4>
+        <h4 class="font-bold">Latest Recipies</h4>
 
         <div>
           <!-- cards go here -->
           <div>
-            <img src="" alt="">
+            <img src="img/stew.jpg" alt="">
             <div>
               <span>5 Bean Chili Stew</span>
               <span>Recipe by Mario</span>
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <h4>Most Popular</h4>
+        <h4 class="font-bold">Most Popular</h4>
 
         <div>
           <!-- cards go here -->
