--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <div>
         <nav>
           <div>
-            <h1 class="font-bold uppercase">
+            <h1 class="font-bold uppercase p-4 border-b border-grey-100">
               <a href="/">Food Ninja</a>
             </h1>
           </div>
@@ -39,10 +39,10 @@
       </div>
     </div>
 
-    <main>
+    <main class="px-16 py-6">
       <div>
-        <a href="#">Log in</a>
-        <a href="#">Sign in</a>
+        <a href="#" class="text-primary">Log in</a>
+        <a href="#" class="text-primary">Sign up</a>
       </div>
 
       <header>
@@ -51,9 +51,9 @@
       </header>
 
       <div>
-        <h4 class="font-bold">Latest Recipies</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipies</h4>
 
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
           <div>
             <img src="img/stew.jpg" alt="">
@@ -64,14 +64,14 @@
           </div>
         </div>
 
-        <h4 class="font-bold">Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
         </div>
 
         <div>
-          <div>Load more</div>
+          <div class="bg-secondary-100 text-secondary-200">Load more</div>
         </div>
       </div>
     </main>
