--- a/public/index.html
+++ b/public/index.html
@@ -8,27 +8,33 @@
 <body class="text-gray-600 font-body">
 
   <div class="grid md:grid-cols-3">
-    <div class="md:col-span-1">
-      <nav>
-        <div>
+    <div class="md:col-span-1 md:flex md:justify-end">
+      <nav class="text-right">
+        <div class="flex justify-between items-center">
           <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-            <a href="/">Food Ninja</a>
+            <a href="/" class="hover:text-black">Food Ninja</a>
           </h1>
+          <div class="px-4 cursor-pointer md:hidden" id="burger">
+            <svg class="w-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+          </div>
         </div>
-        <ul>
-          <li class="text-gray-700 font-bold">
-            <a href="#">
+        <ul class="text-sm mt-6 hidden md:block" id="menu">
+          <li class="text-gray-700 font-bold py-1">
+            <a href="#" class="px-4 flex justify-end border-r-4 border-primary">
               <span>Home</span>
+              <svg class="w-5 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path></svg>
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="py-1">
+            <a href="#" class="px-4 flex justify-end border-r-4 border-white">
               <span>About</span>
+              <svg class="w-5 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
             </a>
-          </li>
+          </li class="py-1">
           <li>
-            <a href="#">
+            <a href="#" class="px-4 flex justify-end border-r-4 border-white">
               <span>Contact</span>
+              <svg class="w-5 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
             </a>
           </li>
         </ul>
@@ -37,8 +43,8 @@
 
     <main class="px-16 py-6 md:col-span-2 bg-gray-100">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="btn text-primary border-primary md:border-2">Log in</a>
-        <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign up</a>
+        <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-1000">Log in</a>
+        <a href="#" class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-1000">Sign up</a>
       </div>
 
       <header>
@@ -51,33 +57,36 @@
 
         <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
-          <div class="card">
+          <div class="card hover:shadow-xl">
             <img src="img/stew.jpg" alt="stew" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">5 Bean Chili Stew</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
             <div class="badge">
+              <svg class="w-5 inline-block" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"></path></svg>
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card">
+          <div class="card hover:shadow-xl">
             <img src="img/noodles.jpg" alt="noodles" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Veg Noodles</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
             <div class="badge">
+              <svg class="w-5 inline-block" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"></path></svg>
               <span>25 mins</span>
             </div>
           </div>
-          <div class="card">
+          <div class="card hover:shadow-xl">
             <img src="img/curry.jpg" alt="curry" class="h-32 sm:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Tofu Curry</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
             <div class="badge">
+              <svg class="w-5 inline-block" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"></path></svg>
               <span>25 mins</span>
             </div>
           </div>
@@ -91,10 +100,10 @@
       </div>
 
       <div class="mt-12 flex justify-center">
-        <div class="btn bg-secondary-100 text-secondary-200">Load more</div>
+        <div class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-1000">Load more</div>
       </div>
     </main>
   </div>
-
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
